--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ body {
   color: var(--adress-link-color);
   
 }
-.header-link::after{
+.current::after{
   content: "";
   
   position: absolute;
@@ -138,15 +138,13 @@ body {
   bottom: 0;
   background-color: var(--adress-link-color);
   border-radius: 2px;
-  opacity: 0;
+  
   
   transition-property: opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-link:is(:hover, :focus)::after{
-  opacity: 1;
-}
+
 
 
 
@@ -599,7 +597,10 @@ body {
   width: calc((100% - 48px) / 3);
 }
 
-.types-items:hover .types-cover-text{
+.types-link:hover .types-cover-text{
+  transform: translateY(0);
+}
+.types-link:focus .types-cover-text{
   transform: translateY(0);
 }
 .types-link {
@@ -635,7 +636,7 @@ body {
   transform: translateY(100%);
   transition-property:transform;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier (0.4, 0, 0.2, 1);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -686,6 +687,7 @@ body {
   background-color:#FCFCFC;
   border-radius: 4px;
   padding: 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transition:transform 250ms linear ; 
 }
 .backdrob.is-hidden .modal{
@@ -704,6 +706,11 @@ body {
   justify-content: center;
   margin-left: auto;
   padding: 0;
+  cursor: pointer;
+}
+.modal-close:is(:hover, :focus){
+  background-color: var(--adress-link-color);
+  fill: var(--bg-white-color);
 }
 
 .is-hidden{
